# as_bot_championship

./: .env.template  .gitignore  Dockerfile  compose.yml  pyproject.toml
as_bot_championship/: config.py  consts.py
as_bot_championship/bot/: bot.py  champ_entities.py  main.py
as_bot_championship/db/: manager.py  tables.py
as_bot_championship/keyboards/: button_factories.py  keyboards.py
atomskills_org_bot/: chats_config.py  config.py  consts.py
atomskills_org_bot/bot/: bot.py  champ_entities.py  main.py
atomskills_org_bot/db/: manager.py  tables.py
atomskills_org_bot/enums/: __init__.py  answer_status_enum.py  page_button_enum.py  service_chat_id_enum.py  service_comment_enum.py  service_name_enum.py  service_state_enum.py
atomskills_org_bot/keyboards/: button_factories.py  keyboards.py
atomskills_org_bot/models/: __init__.py  service_model.py
atomskills_org_bot/static/: services.py
atomskills_org_bot/utils/: __init__.py  fabrics.py  filters.py  funcs.py  keyboards.py  services.py
